@@ -24,7 +24,7 @@
       display: inline-block;
     }
 
-    .issue-no-comments {
+    .issue-no-comments, .issue-no-votes {
       opacity: 0.5;
     }
   }
