@@ -11,6 +11,8 @@ module SortingHelper
       sort_value_largest_repo => sort_title_largest_repo,
       sort_value_recently_signin => sort_title_recently_signin,
       sort_value_oldest_signin => sort_title_oldest_signin,
+      sort_value_downvotes => sort_title_downvotes,
+      sort_value_upvotes => sort_title_upvotes
     }
   end
 
@@ -54,6 +56,14 @@ module SortingHelper
     'Oldest sign in'
   end
 
+  def sort_title_downvotes
+    'Least popular'
+  end
+
+  def sort_title_upvotes
+    'Most popular'
+  end
+
   def sort_value_oldest_updated
     'updated_asc'
   end
@@ -92,5 +102,13 @@ module SortingHelper
 
   def sort_value_oldest_signin
     'oldest_sign_in'
+  end
+
+  def sort_value_downvotes
+    'downvotes_desc'
+  end
+
+  def sort_value_upvotes
+    'upvotes_desc'
   end
 end
