@@ -15,6 +15,25 @@
         %li
           = link_to_member(@project, issue.assignee, name: false, title: "Assigned to :name")
 
+      - upvotes, downvotes = issue.upvotes, issue.downvotes
+      - if upvotes > 0 || downvotes > 0
+        %li
+          = icon('thumbs-up')
+          = upvotes
+      - else
+        %li{ class: 'issue-no-votes' }
+          = icon('thumbs-up')
+          = upvotes
+
+      - if upvotes > 0 || downvotes > 0
+        %li
+          = icon('thumbs-down')
+          = downvotes
+      - else
+        %li{ class: 'issue-no-votes' }
+          = icon('thumbs-down')
+          = downvotes
+
       - note_count = issue.notes.user.count
       - if note_count > 0
         %li
