@@ -174,11 +174,68 @@ class Spinach::Features::ProjectIssues < Spinach::FeatureSteps
            author: project.users.first)
   end
 
+  step 'project "Shop" have "Bugfix" open issue' do
+    create(:issue,
+           title: "Bugfix",
+           project: project,
+           author: project.users.first)
+  end
+
   step 'project "Shop" have "Release 0.3" closed issue' do
     create(:closed_issue,
            title: "Release 0.3",
            project: project,
            author: project.users.first)
+  end
+
+  step 'issue "Release 0.4" have 2 upvotes and 1 downvote' do
+    issue = Issue.find_by(title: 'Release 0.4')
+    create_list(:upvote_note, 2, project: project, noteable: issue)
+    create(:downvote_note, project: project, noteable: issue)
+  end
+
+  step 'issue "Tweet control" have 1 upvote and 2 downvotes' do
+    issue = Issue.find_by(title: 'Tweet control')
+    create(:upvote_note, project: project, noteable: issue)
+    create_list(:downvote_note, 2, project: project, noteable: issue)
+  end
+
+  step 'The list should be sorted by "Least popular"' do
+    page.within '.issues-list' do
+      page.within 'li.issue:nth-child(1)' do
+        expect(page).to have_content 'Tweet control'
+        expect(page).to have_content '1 2'
+      end
+
+      page.within 'li.issue:nth-child(2)' do
+        expect(page).to have_content 'Release 0.4'
+        expect(page).to have_content '2 1'
+      end
+
+      page.within 'li.issue:nth-child(3)' do
+        expect(page).to have_content 'Bugfix'
+        expect(page).to have_content '0 0'
+      end
+    end
+  end
+
+  step 'The list should be sorted by "Most popular"' do
+    page.within '.issues-list' do
+      page.within 'li.issue:nth-child(1)' do
+        expect(page).to have_content 'Release 0.4'
+        expect(page).to have_content '2 1'
+      end
+
+      page.within 'li.issue:nth-child(2)' do
+        expect(page).to have_content 'Tweet control'
+        expect(page).to have_content '1 2'
+      end
+
+      page.within 'li.issue:nth-child(3)' do
+        expect(page).to have_content 'Bugfix'
+        expect(page).to have_content '0 0'
+      end
+    end
   end
 
   step 'empty project "Empty Project"' do
