@@ -113,6 +113,22 @@ module SharedIssuable
     end
   end
 
+  step 'I sort the list by "Least popular"' do
+    find('button.dropdown-toggle.btn').click
+
+    page.within('ul.dropdown-menu.dropdown-menu-align-right li') do
+      click_link 'Least popular'
+    end
+  end
+
+  step 'I sort the list by "Most popular"' do
+    find('button.dropdown-toggle.btn').click
+
+    page.within('ul.dropdown-menu.dropdown-menu-align-right li') do
+      click_link 'Most popular'
+    end
+  end
+
   step 'The list should be sorted by "Oldest updated"' do
     page.within('div.dropdown.inline.prepend-left-10') do
       expect(page.find('button.dropdown-toggle.btn')).to have_content('Oldest updated')
