@@ -62,6 +62,7 @@ v 8.5.0 (unreleased)
   - Replaces "Create merge request" link with one to the "Merge Request" when one exists
   - Fix CI builds badge, add a new link to builds badge, deprecate the old one
   - Fix broken link to project in build notification emails
+  - Ability to see and sort on vote count from Issues and MR lists
 
 v 8.4.4
   - Update omniauth-saml gem to 1.4.2
